[package]
edition = "2018"
version = "0.5.3"
name = "durt"
description = "Command line tool for calculating the size of files and directories"

repository = "https://github.com/cauebs/durt"
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]
license = "GPL-3.0+"
readme = "README.md"

keywords = ["cli", "file", "size", "disk", "usage"]
categories = ["command-line-interface", "command-line-utilities", "filesystem"]

[dependencies]
structopt = "0.2.10"
walkdir = "2.1.4"
number_prefix = "0.2.8"
ansi_term = "0.11.0"
tabular = "0.1.2"
wild = "2.0.1"
