[package]
edition = "2018"
version = "0.6.0"
name = "durt"
description = "Command line tool for calculating the size of files and directories"

repository = "https://github.com/cauebs/durt"
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]
license = "GPL-3.0+"
readme = "README.md"

keywords = ["cli", "file", "size", "disk", "usage"]
categories = ["command-line-interface", "command-line-utilities", "filesystem"]

[dependencies]
structopt = "0.3.9"
number_prefix = "0.3.0"
ansi_term = "0.12.1"
tabular = "0.1.4"
wild = "2.0.2"
walkdir = "2.3.1"
